--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   web:
     build: .
     command: python /code/manage.py runserver 0.0.0.0:8000
+    environment: 
+      - SECRET_KEY=9z^@lfd*vi65s#^vgx8+59wgh-kb9%dzbejhhlztr@7pyv&@0@
+      - DEBUG=1
     volumes:
       - .:/code
     ports:
