--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,13 +4,11 @@ services:
     build: .
     command: python /code/manage.py runserver 0.0.0.0:8000
     environment: 
-      - ENVIRONMENT=development
+      - ENVIRONMENT=production
       - SECRET_KEY=9z^@lfd*vi65s#^vgx8+59wgh-kb9%dzbejhhlztr@7pyv&@0@
-      - DEBUG=1
+      - DEBUG=0
       - STRIPE_TEST_SECRET_KEY=sk_test_51H09CmGKSIf6Dcq9eOKqOTfMRJ0EVT64dn4zvDYzpg4nzRSlfYuCA9jBMVg5KAPxu602KIuy1EWNgDG2EyerWFcf009ZPFNDSO
       - STRIPE_TEST_PUBLISHABLE_KEY=pk_test_51H09CmGKSIf6Dcq96jpohfhu4jA5T0Nz7VOoAguX2yksFXIJH7lSM5XlLtyndozggctZsdFCXiQuPpAFl0a9gIDS008v6Lilx7
-    volumes:
-      - .:/code
     ports:
       - 8000:8000
     depends_on:
@@ -21,7 +19,3 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-volumes:
-  postgres_data:
